err/uvc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uvc'...
Compiling './lib/python3.5/site-packages/uvc/main.py'...
***   File "./lib/python3.5/site-packages/uvc/main.py", line 232
    except commands.GetValueFromEditor, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvc/path.py'...
***   File "./lib/python3.5/site-packages/uvc/path.py", line 886
    def mkdir(self, mode=0777):
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/uvc/tests'...
Compiling './lib/python3.5/site-packages/uvc/tests/test_commands.py'...
***   File "./lib/python3.5/site-packages/uvc/tests/test_commands.py", line 49
    except commands.GetValueFromEditor,e :
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvc/tests/test_svn.py'...
***   File "./lib/python3.5/site-packages/uvc/tests/test_svn.py", line 227
    except svn.SVNError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uvc-0.4.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
